feat(head): new font

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -67,7 +67,8 @@ serif;
 $garamond : Garamond,
 serif;
 
-$global-font-family : $sans-serif;
+// $global-font-family : $sans-serif;
+$global-font-family : $georgia;
 $header-font-family : $sans-serif;
 $caption-font-family : $serif;
 
